# taintwatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/: README.md  architecture.md  configuration.md  feeds.md  install.md  severity.md  tui.md
docs/commands/: autostart.md  config.md  feeds.md  report.md  scan.md  ui.md  watch.md
src/taintwatch/: branding.py  cli.py  config.py  discover.py  installed.py  models.py  paths.py  scanner.py  state.py  tui.py  version_match.py
src/taintwatch/alerts/: __init__.py  base.py  discord.py  report.py  severity.py  stdout.py  toast.py
src/taintwatch/feeds/: __init__.py  aikido.py  base.py  openssf.py  osv.py
src/taintwatch/parsers/: __init__.py  cargo.py  gomod.py  npm.py  pip.py  pnpm.py  poetry.py  yarn.py
src/taintwatch/scheduler/: __init__.py  base.py  linux.py  macos.py  windows.py
tests/: test_discover.py  test_feeds_staleness.py  test_parsers.py  test_scanner_e2e.py  test_severity.py  test_tui_smoke.py  test_version_match.py
tests/fixtures/lockfiles/: go.sum  package-lock.json  pnpm-lock.yaml  requirements.txt
